--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+click==8.1.3
+Flask-Login==0.6.2
 Flask==2.1.0
 google-cloud-firestore==2.11.0
 google-cloud-secret-manager==2.16.1
 gunicorn==20.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+oauthlib==3.2.2
+pyOpenSSL==23.1.1
+requests==2.28.2
+Werkzeug==2.2.3
